# otus_05_homework

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  context.cpp  context.h  document.cpp  document.h  figure.cpp  figure.h  figure_factory.cpp  figure_factory.h  figure_stream.cpp  figure_stream.h  figure_type.h  figures.txt  gtests  gtests.txt  lib.h  line.cpp  line.h  main.cpp  point.cpp  point.h  techstack.md  techstack.yml  tests.cpp
html/: _c_make_cache_8txt.html  _c_make_lists_8txt.html  annotated.html  classes.html  classhomework_1_1_context-members.html  classhomework_1_1_context.html  classhomework_1_1_document-members.html  classhomework_1_1_document.html  classhomework_1_1_document_a2fa764cb13d672e3233d6d059b479b4b_cgraph.map  classhomework_1_1_document_a2fa764cb13d672e3233d6d059b479b4b_cgraph.md5  classhomework_1_1_document_a94beec9c7478ff2bf9ee71921c78f921_cgraph.map  classhomework_1_1_document_a94beec9c7478ff2bf9ee71921c78f921_cgraph.md5  classhomework_1_1_figure-members.html  classhomework_1_1_figure.html  classhomework_1_1_figure__inherit__graph.map  classhomework_1_1_figure__inherit__graph.md5  classhomework_1_1_figure_stream-members.html  classhomework_1_1_figure_stream.html  classhomework_1_1_figure_stream_a73e68767792482d2fcb6908a8a46aa5b_cgraph.map  classhomework_1_1_figure_stream_a73e68767792482d2fcb6908a8a46aa5b_cgraph.md5  classhomework_1_1_line-members.html  classhomework_1_1_line.html  classhomework_1_1_line__inherit__graph.map  (+149 more)
(+42 files in other folders)
